--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
-body, html{
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+
+
+img {
+    object-fit: cover;
 }
 
 #bodylogin{
     background-image: url(corazonesfondo.jpg) ;
+    background-color: #000000;
     min-height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -18,6 +19,7 @@ body, html{
 
 #bodyregalo{
     background-image: url(love.jpg) ;
+    background-color: #000000;
     min-height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -67,4 +69,34 @@ body, html{
     width: 50%;
     border: 5px solid rgba(120, 118, 118, 0.6);
     border-radius: 2px;
+}
+
+@media (orientation: portrait) {
+    #bodylogin {
+        background-image: url('corazonesfondo-vertical.jpg');
+    }
+}
+
+@media (orientation: landscape) {
+    #bodylogin {
+        background-image: url('corazonesfondo-horizontal.jpg');
+    }
+}
+
+@media (orientation: portrait) {
+    #bodyregalo {
+        background-image: url('love-vertical.jpg');
+    }
+    img{
+        height: 100%;
+    }
+    .card{
+        margin-top: 15%;
+    }
+}
+
+@media (orientation: landscape) {
+    #bodyregalo {
+        background-image: url('love-horizontal.jpg');
+    }
 }
